// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat renders with color amber 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--amber"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color blue 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--blue"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color brown 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--brown"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color chartreuse 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--chartreuse"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color green 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--green"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color grey 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--grey"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color lilac 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--lilac"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color orange 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--orange"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color pink 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--pink"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color purple 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--purple"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color rose 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--rose"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with color teal 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--teal"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;

exports[`Stat renders with defaultProps 1`] = `
<li
  className="ax-stat-cards__stat"
>
  <h2
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h2>
</li>
`;
